# SourceDiff

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dissertation/: dissertation.tex
dissertation/cls/: cmpreport.cls
report/: cmpreport.cls  doc.bib  doc.tex  marksheet.tex  report.bib  report.tex
report/class/: cmpreport.cls
src/: SourceDiff.c  api.h  main.c
test/: bar.c  foo.c
